# KmerGpt

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  chatrequest.cpp  config.json-sample  logger.cpp  main.cpp  openai.cpp  qtquickcontrols2.conf  resources.qrc
include/: chatrequest.h  logger.h  openai.h
view/js/: worker.js
view/qml/: FirstScreen.qml  Home.qml  Main.qml  main.qml
view/qml/Components/: AppDrawer.qml  ChatMessageDelegate.qml  TmpChatListModel.qml  qmldir
